assets/css/style.css
/* ---------- COLORS AND FONTS ---------- */

#home {
    background-color: #fff;
}

#services {
    background-color: #fbfbfb;
}

#testimonials {
    background-color: #fff;
}

#about {
    background-color: #fbfbfb;
}

#contact {
    background-color: #fff;
}

body {
    font-family: 'Montserrat', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6,
nav {
    font-family: 'Josefin Sans', sans-serif;
}

/* ---------- PADDINGS, MARGINS AND UTILITY RULES ---------- */

.section-header {
    margin-top: 100px;
    font-size: 2.5rem;
}

/* ---------- HEADER AND NAV STYLES ---------- */

body {
    position: relative;
    /* Required for Bootstrap scrollspy */
}

header .fixed-top {
    border-bottom: solid 1px #e9ecef;
}

.section-header {
    text-transform: uppercase;
}

nav {
    font-size: 1.25em;
}

nav a {
    color: #212529;
}

nav a:hover {
    color: #222222;
}

#scrollspy-navbar {
    margin: 10px 0;
}

.home-link {
    border-bottom: solid 0px #33658A;
}

.services-link {
    border-bottom: solid 0px #86BBD8;
}

.testimonials-link {
    border-bottom: solid 0px #136F63;
}

.about-link {
    border-bottom: solid 0px #F6AE2D;
}

.contact-link {
    border-bottom: solid 0px #F26419;
}

.active {
    border-bottom-width: 5px;
}

.nav-link:hover {
    border-bottom-width: 5px;
}

/* ---------- HOME SECTION STYLES ---------- */

#home {
    margin-top: 100px;
}

#home .jumbotron {
    margin: 25px 0 50px;
}

.feature-img-round {
    border-radius: 50%;
    max-height: 325px;
    max-width: 325px;
}

#home hr {
    margin-left: 0;
    width:100px;
    border-bottom: solid 5px #33658A;
}

.btn-home {
    color: #fff;
    background-color: #33658A;
    border-color: #33658A;
    margin: 5px;
}

.btn-home:hover {
    color: #212529;
    background-color: #fff;
}

.btn-contact {
    color: #fff;
    background-color: #F26419;
    border-color: #F26419;
    margin: 5px;
}

.btn-contact:hover {
    color: #212529;
    background-color: #fff;
}

/* ---------- SERVICES SECTION STYLES ---------- */

#services hr {
    margin-bottom: 50px;
    width:100px;
    border-bottom: solid 5px #86BBD8;
}

.card-icon-round {
    height: 200px;
    width: 200px;
    border-radius: 50%;
    background-color: #33658A;
    margin: 0 auto 12px;
}

.card-icon-round i {
    color: #fff;
}

.design-icon {
    background-color: #86BBD8;
    font-size: 180px;
    line-height: 200px;
}

.dev-icon {
    background-color: #F26419;;
    font-size: 130px;
    line-height: 200px;
}

.content-icon {
    background-color: #F6AE2D;
    font-size: 130px;
    line-height: 200px;
}

.hosting-icon {
    background-color: #136F63;
    font-size: 130px;
    line-height: 200px;
}

.card {
    margin-bottom: 50px;
}

.call-to-action-text {
    margin-bottom: 25px;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 2rem;
}

#services .btn {
    margin-bottom: 50px;
}

/* ---------- TESTIMONIALS SECTION STYLES ---------- */

#testimonials hr {
    margin-bottom: 50px;
    width:100px;
    border-bottom: solid 5px #136F63;
}

.testimonial-text {}

.testimonial-name {}

/* ---------- ABOUT ME SECTION STYLES ---------- */

#about hr {
    margin-bottom: 50px;
    width:100px;
    border-bottom: solid 5px #F6AE2D;
}

#about h3 {
    margin-bottom: 25px;
}

#about .btn {
    margin: 25px auto 50px;
}

/* ---------- CONTACT ME SECTION STYLES ---------- */

#contact hr {
    margin-bottom: 50px;
    width:100px;
    border-bottom: solid 5px #F26419;
}

#contact .list-group {
    font-size: 1.5rem;
}

#contact p,
#contact .list-group,
#contact input,
#contact textarea {
    margin-bottom: 25px;
}

#contact .btn {
    margin-bottom: 50px;
    min-width: 140px;
}

#contact textarea {
    resize: vertical;
}

.list-group-item:hover {
    color: #fff;
    background-color: #F26419;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.form-control:focus, #contact .btn:focus {
    border-color: #F26419;
    box-shadow: 0 0 0 .2rem rgba(242,100,25,.25)
}

/* ---------- FOOTER STYLES ---------- */

footer {
    background-color: grey;
}

footer p {
    margin: 25px 0;
}

.footer-contact {
    margin-bottom: 25px;
}

/* ---------- TESTING STYLES ---------- */

section {
    background-color: aquamarine;
    min-height: 500px;
    /* overflow-y: scroll; */
}

/* ---------- MEDIA QUERIES ---------- */

@media (min-width:768px) {
    .feature-img-round {
        max-width: none;
        max-height: none;
    }
}

